--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             class="profile__image"
           />
           <div class="profile__info">
-            <p class="profile__title">Jacques Cousteau</p>
+            <h1 class="profile__title">Jacques Cousteau</h1>
             <button class="profile__edit-button" type="button"></button>
             <p class="profile__description">Explorer</p>
           </div>
@@ -35,29 +35,29 @@
             <li class="card">
               <img src="./images/yosemite-valley.png" class="card__image" />
               <div class="card__description">
-                <p class="card__name">Yosemite Valley</p>
-                <button class="card__like-button"></button>
+                <h2 class="card__name">Yosemite Valley</h2>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
               <img src="./images/lake-louise.png" class="card__image" />
               <div class="card__description">
-                <p class="card__name">Lake Louise</p>
-                <button class="card__like-button"></button>
+                <h2 class="card__name">Lake Louise</h2>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
               <img src="./images/bald-mountains.png" class="card__image" />
               <div class="card__description">
-                <p class="card__name">Bald Mountains</p>
-                <button class="card__like-button"></button>
+                <h2 class="card__name">Bald Mountains</h2>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
               <img src="./images/latemar.png" class="card__image" />
               <div class="card__description">
-                <p class="card__name">Latemar</p>
-                <button class="card__like-button"></button>
+                <h2 class="card__name">Latemar</h2>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
@@ -66,15 +66,15 @@
                 class="card__image"
               />
               <div class="card__description">
-                <p class="card__name">Vanoise National Park</p>
-                <button class="card__like-button"></button>
+                <h2 class="card__name">Vanoise National Park</h2>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
               <img src="./images/lago-di-braies.png" class="card__image" />
               <div class="card__description">
-                <p class="card__name">Lago di Braies</p>
-                <button class="card__like-button"></button>
+                <h2 class="card__name">Lago di Braies</h2>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
           </ul>
