--- a/index.html
+++ b/index.html
@@ -33,28 +33,44 @@
         <section class="cards page__section">
           <ul class="cards__list">
             <li class="card">
-              <img src="./images/yosemite-valley.png" class="card__image" />
+              <img
+                src="./images/yosemite-valley.png"
+                class="card__image"
+                alt="Card Image"
+              />
               <div class="card__description">
                 <h2 class="card__name">Yosemite Valley</h2>
                 <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/lake-louise.png" class="card__image" />
+              <img
+                src="./images/lake-louise.png"
+                class="card__image"
+                alt="Card Image"
+              />
               <div class="card__description">
                 <h2 class="card__name">Lake Louise</h2>
                 <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/bald-mountains.png" class="card__image" />
+              <img
+                src="./images/bald-mountains.png"
+                class="card__image"
+                alt="Card Image"
+              />
               <div class="card__description">
                 <h2 class="card__name">Bald Mountains</h2>
                 <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/latemar.png" class="card__image" />
+              <img
+                src="./images/latemar.png"
+                class="card__image"
+                alt="Card Image"
+              />
               <div class="card__description">
                 <h2 class="card__name">Latemar</h2>
                 <button class="card__like-button" type="button"></button>
@@ -64,6 +80,7 @@
               <img
                 src="./images/vanoise-national-park.png"
                 class="card__image"
+                alt="Card Image"
               />
               <div class="card__description">
                 <h2 class="card__name">Vanoise National Park</h2>
@@ -71,7 +88,11 @@
               </div>
             </li>
             <li class="card">
-              <img src="./images/lago-di-braies.png" class="card__image" />
+              <img
+                src="./images/lago-di-braies.png"
+                class="card__image"
+                alt="Card Image"
+              />
               <div class="card__description">
                 <h2 class="card__name">Lago di Braies</h2>
                 <button class="card__like-button" type="button"></button>
