--- a/index.html
+++ b/index.html
@@ -104,6 +104,17 @@
     <footer class="footer">
       <p class="footer__description">© 2022 Around The U.S.</p>
     </footer>
+    <div class="modal">
+      <div class="modal__container">
+        <button class="modal__close"></button>
+        <p class="modal__heading">Edit Profile</p>
+        <form class="modal__form">
+          <input type="text" name="title" />
+          <input type="text" name="description" />
+          <button class="modal__button">Save</button>
+        </form>
+      </div>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
