--- a/index.html
+++ b/index.html
@@ -2,23 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Around The U.S</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Around the US</title>
     <link href="./pages/index.css" rel="stylesheet" />
   </head>
   <body class="page">
     <div class="page__content">
+      <!-- Header Section -->
       <header class="header page__section">
         <img
+          class="header__image"
           src="./images/logo.svg"
-          alt="Around the U.S. logo"
-          class="header__logo"
+          alt="Around the U.S logo"
         />
       </header>
+
+      <!-- Main Content Section -->
       <main class="content">
+        <!-- Profile Section -->
         <section class="profile page__section">
           <img
-            src="./images/jacques-cousteau.jpg"
+            src="./images/j.cousteau.jpg"
             alt="Avatar"
             class="profile__image"
           />
@@ -33,46 +38,95 @@
           </div>
           <button class="profile__add-button" type="button"></button>
         </section>
+
+        <!-- Cards Section -->
         <section class="cards page__section">
           <ul class="cards__list"></ul>
         </section>
       </main>
-    </div>
-    <footer class="footer">
-      <p class="footer__description">© 2022 Around The U.S.</p>
-    </footer>
-    <div class="modal" id="profile-edit-modal">
-      <div class="modal__container">
-        <button class="modal__close" type="button"></button>
-        <p class="modal__heading">Edit Profile</p>
-        <form class="modal__form">
-          <input
-            class="modal__input"
-            id="profile-title-input"
-            type="text"
-            name="title"
-            placeholder="Name"
-          />
-          <input
-            class="modal__input"
-            id="profile-description-input"
-            type="text"
-            name="description"
-            placeholder="Description"
-          />
-          <button class="modal__button">Save</button>
-        </form>
+
+      <!-- Footer Section -->
+      <footer class="footer page__section">
+        <p class="footer__copyright">&copy; 2024 Luis Segura</p>
+      </footer>
+
+      <!-- Modals -->
+      <div class="modal" id="profile-edit-modal">
+        <div class="modal__container">
+          <button class="modal__close" id="profile-close-button"></button>
+          <p class="modal__heading">Edit Profile</p>
+          <form class="modal__form">
+            <input
+              class="modal__form-input"
+              type="text"
+              name="title"
+              id="profile-title-input"
+              placeholder="Name"
+            />
+            <input
+              class="modal__form-input"
+              type="text"
+              name="description"
+              id="profile-description-input"
+              placeholder="Description"
+            />
+            <button class="button modal__button" type="submit">
+              <span class="modal__button-text">Save</span>
+            </button>
+          </form>
+        </div>
+      </div>
+
+      <div class="modal" id="profile-add-modal">
+        <div class="modal__container">
+          <button class="modal__close" id="card-close-button"></button>
+          <p class="modal__heading">New Place</p>
+          <form class="modal__form">
+            <input
+              class="modal__form-input modal__form-input_type_title"
+              type="text"
+              name="title"
+              id="profile-title-input"
+              placeholder="Title"
+            />
+            <input
+              class="modal__form-input modal__form-input_type_url"
+              type="text"
+              name="url"
+              id="profile-description-input"
+              placeholder="Image URL"
+            />
+            <button class="button modal__button" type="submit">
+              <span class="modal__button-text">Create</span>
+            </button>
+          </form>
+        </div>
+      </div>
+
+      <div class="modal" id="preview_image_modal">
+        <div class="modal_container_preview">
+          <button class="modal__close" id="preview-close-button"></button>
+          <img class="modal__image" id="preview-image" src="" alt="Preview" />
+          <h3 class="preview_modal_description"></h3>
+        </div>
       </div>
     </div>
+
+    <!-- Template for Card -->
     <template id="card-template">
       <li class="card">
-        <img class="card__image" src="" alt="" />
+        <div class="card__image_container">
+          <img src="" alt="" class="card__image" />
+          <button class="card__delete-button" type="button"></button>
+        </div>
         <div class="card__description">
-          <h2 class="card__title"></h2>
-          <button class="card__like-button" type="button"></button>
+          <h2 class="card__text"></h2>
+          <button class="card__button-like" type="button"></button>
         </div>
       </li>
     </template>
+
+    <!-- Scripts -->
     <script src="./scripts/index.js"></script>
   </body>
 </html>
