--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="modal" id="profile-add-modal">
         <div class="modal__container">
           <button class="modal__close" id="card-close-button"></button>
-          <p class="modal__heading">New Place</p>
+          <h1 class="modal__heading">New Place</h1>
           <form class="modal__form">
             <input
               class="modal__form-input modal__form-input_type_title"
@@ -127,6 +127,6 @@
     </template>
 
     <!-- Scripts -->
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
