--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="modal" id="profile-edit-modal">
         <div class="modal__container">
           <button class="modal__close" id="profile-close-button"></button>
-          <p class="modal__heading">Edit Profile</p>
+          <h2 class="modal__heading">Edit Profile</h2>
           <form class="modal__form">
             <input
               class="modal__form-input"
