--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
       </main>
       <footer class="footer page__section">
-        <p class="footer__copyright">&copy; 2024 Around The U.S. Luis Segura</p>
+        <p class="footer__copyright">&copy; 2024 Luis Segura</p>
       </footer>
     </div>
 
