--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
         <button
           type="button"
           class="modal__close"
-          id="profile-add-close"
+          id="add-card-modal-close"
         ></button>
         <h3 class="modal__heading">New Place</h3>
         <form class="modal__form" id="add-card-form">
           <input
             type="text"
             name="title"
-            id="profile-title-input"
+            id="add-card-title-input"
             placeholder="Title"
             class="modal__input modal__input_type_title"
             required
@@ -67,7 +67,7 @@
           <input
             type="text"
             name="url"
-            id="profile-url-input"
+            id="add-card-url-input"
             placeholder="Image URL"
             class="modal__input modal__input_type_url"
             required
@@ -89,7 +89,7 @@
         <button
           type="button"
           class="modal__close"
-          id="profile-edit-close"
+          id="edit-modal-close"
         ></button>
         <h3 class="modal__heading">Edit Profile</h3>
         <form class="modal__form" id="profile-edit-form">
