--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             required
           />
           <!-- Highlighted correction: Added span for error message -->
-          <span class="popup__error" id="add-card-title-input-error"></span>
+          <span class="modal__error" id="add-card-title-input-error"></span>
 
           <input
             type="url"
@@ -76,7 +76,7 @@
             required
           />
           <!-- Highlighted correction: Added span for error message -->
-          <span class="popup__error" id="add-card-url-input-error"></span>
+          <span class="modal__error" id="add-card-url-input-error"></span>
 
           <button
             class="modal__button modal__button_disabled"
@@ -109,7 +109,7 @@
             maxlength="40"
             required
           />
-          <span class="popup__error" id="profile-name-input-error"></span>
+          <span class="modal__error" id="profile-name-input-error"></span>
 
           <input
             type="text"
@@ -122,7 +122,7 @@
             required
           />
           <span
-            class="popup__error"
+            class="modal__error"
             id="profile-description-input-error"
           ></span>
           <button class="modal__button modal__button_disabled" type="submit">
