--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <main class="page__content">
         <section class="profile page__section">
           <img
-            src="./images/jacques-cousteau.png"
+            src="./images/j.cousteau.jpg"
             alt="Avatar"
             class="profile__image"
           />
