--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           id="modal-close-button"
         ></button>
         <form class="modal__form" name="profile-form" id="profile-form">
-          <h2 class="modal__heading">Edit Modal</h2>
+          <h2 class="modal__heading">Edit Profile</h2>
 
           <label class="modal__input-label"
             >Name*
@@ -145,7 +145,7 @@
           <label class="modal__input-label"
             >Image link *
             <input
-              class="modal__input .modal__input_type-link"
+              class="modal__input modal__input_type-link"
               id="link-type"
               type="url"
               name="url"
@@ -200,6 +200,6 @@
         </div>
       </li>
     </template>
-    <script type="module" src="./scripts/index.js" defer></script>
+    <script type="module" src="./pages/index.js" defer></script>
   </body>
 </html>
