--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <form class="modal__form" name="profile-form" id="profile-form">
           <h2 class="modal__heading">Edit Profile</h2>
 
-          <label class="modal__input-label"
-            >Name*
+          <label class="modal__input-label">
+            Name*
             <input
               class="modal__input modal__input-title"
               type="text"
@@ -89,8 +89,9 @@
               id="owner-name-error"
             ></span>
           </label>
-          <label class="modal__input-label"
-            >About *
+
+          <label class="modal__input-label">
+            About*
             <input
               class="modal__input modal__input-description"
               type="text"
@@ -105,6 +106,7 @@
               id="about-error"
             ></span>
           </label>
+
           <button type="submit" class="modal__input-button" id="modal-button">
             Save
           </button>
@@ -124,8 +126,8 @@
           <h3 class="modal__heading">New Place</h3>
 
           <!-- modal box content: 1 -->
-          <label class="modal__input-label"
-            >Title*
+          <label class="modal__input-label">
+            Title*
             <input
               class="modal__input modal__input_type-title"
               type="text"
@@ -142,8 +144,8 @@
           </label>
 
           <!-- modal box content: 2 -->
-          <label class="modal__input-label"
-            >Image link *
+          <label class="modal__input-label">
+            Image link*
             <input
               class="modal__input modal__input_type-link"
               id="link-type"
@@ -182,6 +184,7 @@
         <p class="modal__caption"></p>
       </div>
     </div>
+
     <template id="card-template">
       <li class="card">
         <img src="" alt="" class="card__image" />
