--- a/src/index.html
+++ b/src/index.html
@@ -144,6 +144,10 @@
               placeholder="Enter image URL"
               required
             />
+            <span
+              class="modal__error modal__link_error"
+              id="avatar-link-error"
+            ></span>
           </label>
 
           <button type="submit" class="modal__submit" id="modal-avatar-button">
